--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,8 +35,7 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with Pylint
+    - name: Lint with pylint
       run: |
-        pip install pylint
-        export WORK_DIR=./
-        python -m pylint --rcfile ./pipelines/.pylintrc --output-format=colorized .
+        export WORK_DIR=$GITHUB_WORKSPACE
+        python -m pylint --rcfile ${GITHUB_WORKSPACE}/pipelines/.pylintrc --output-format=colorized ${GITHUB_WORKSPACE}
