--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,7 +28,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r common_requirements.txt
         pip install -r dev_requirements.txt
-        
+    - name: Tests with pytest
+      run: |
+        python -m pytest ./tests   
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
