--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -11,6 +11,11 @@ on:
 
 permissions:
   contents: read
+  
+env:
+  MIN_COVERAGE_SCORE: 80
+  FLAKE8_MAX_COMPLEXITY: 7
+  MAX_LINE_LENGTH: 120
 
 jobs:
   build:
