--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -43,8 +43,8 @@ jobs:
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is MAX_LINE_LENGTH chars wide
+        flake8 . --count --exit-zero --max-complexity=${FLAKE8_MAX_COMPLEXITY} --max-line-length=${MAX_LINE_LENGTH} --statistics
     - name: Lint with pylint
       run: |
         export WORK_DIR=$GITHUB_WORKSPACE
