--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,13 +1,9 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: Lint and check types and tests
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: [push, pull_request]
 
 permissions:
   contents: read
@@ -39,13 +35,15 @@ jobs:
     - name: Test coverage
       run: |
         python -m pytest --cov ./ ./tests --cov-fail-under=${MIN_COVERAGE_SCORE} --cov-config=./.coveragerc --cov-report term-missing:skip-covered      
-    - name: Lint with flake8
+    - name: Lint code by ruff
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is MAX_LINE_LENGTH chars wide
-        flake8 . --count --exit-zero --max-complexity=${FLAKE8_MAX_COMPLEXITY} --max-line-length=${MAX_LINE_LENGTH} --statistics
+        ruff .
     - name: Lint with pylint
       run: |
         export WORK_DIR=$GITHUB_WORKSPACE
         python -m pylint --rcfile ${GITHUB_WORKSPACE}/pipelines/.pylintrc --output-format=colorized ${GITHUB_WORKSPACE}
+
+    - name: Check types by pyright
+      run: |
+        python -m pyright   
