--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,11 @@ select = ["F", "E", "W", "C90",
           "ISC", "T20", "Q", "PTH"]
 
 line-length = 120
+ignore=["B019", "A003", "S324"]
+
+[tool.ruff.per-file-ignores]
+"tests/*.py" = ["S101"]
+"core/log_message.py" = ["T201"]
 
 [tool.pyright]
 reportUnnecessaryTypeIgnoreComment="warning"
