--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,14 +24,22 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.11.1"
+    - name: Install poetry
+        run: |
+          pip install pipx
+          pipx install poetry
+    - name: Validate the structure of the pyproject.toml
+      run: |
+        poetry check
+    - name: Verify that poetry.lock is consistent with pyproject.toml
+      run: |
+        poetry lock --check
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r common_requirements.txt
-        pip install -r dev_requirements.txt
+        poetry install
     - name: Tests with pytest
       run: |
-        python -m pytest ./tests    
+        poetry pytest ./tests
     - name: Test coverage
       run: |
         python -m pytest --cov ./ ./tests --cov-fail-under=${MIN_COVERAGE_SCORE} --cov-config=./.coveragerc --cov-report term-missing:skip-covered      
