--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pyright = "==1.1.295"
 pytest-cov = "==4.0.0"
 pylint-pytest = "==1.1.2"
 black = "==23.1.0"
+pylint = "==2.16.2"
 
 
 [build-system]
