--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,7 +33,7 @@ jobs:
           poetry check
       - name: Verify that poetry.lock is consistent with pyproject.toml
         run: |
-          poetry lock --check
+          poetry check --lock
       - name: Install dependencies
         run: |
           poetry install
