optimize read xls

--- a/pipelines/setup.cfg
+++ b/pipelines/setup.cfg
@@ -1,5 +1,5 @@
 [mutmut]
-paths_to_mutate=/home/huck/petprojects/priceformation/src
+paths_to_mutate=abs path to src
 backup=False
 runner=pytest -x -q --tb==no --testmon -o addopts=""
-tests_dir=/home/huck/petprojects/priceformation/tests
+tests_dir=
