--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,14 +19,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python 3.13
-        uses: actions/setup-python@v3
+      - uses: actions/checkout@v5
+      - name: Set up Python
+        uses: actions/setup-python@v6
         with:
-          python-version: "3.13"
-      - name: Install dependency
+          python-version-file: "pyproject.toml"
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+      - name: Install project dependency
         run: |
-          uv sync
+          uv sync --locked --all-extras --dev
       - name: Test coverage
         run: |
           export PYTHONPATH=${GITHUB_WORKSPACE}
