--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,15 +2,13 @@
 name = "priceformation"
 version = "0.1.0"
 description = ""
-authors = [{ name = "huck" }]
+authors = [{ name = "va.kasyanov" }]
 requires-python = "==3.13.*,<4"
 readme = "README.md"
 dependencies = [
     "openpyxl==3.1.5",
     "termcolor==2.2.0",
     "colorama==0.4.6",
-    "aiosqlite==0.21.0",
-    "yoyo-migrations==9.0.0",
     "python_calamine==0.5.4",
 ]
 
