add mutation testing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "pytest==9.0.1",
+    "mutmut==3.4.0",
     "pyright==1.1.407",
     "pytest-cov==7.0.0",
     "black==25.11.0",
@@ -44,3 +45,20 @@ ignore=["B019", "A003", "S324"]
 
 [tool.pyright]
 reportUnnecessaryTypeIgnoreComment="warning"
+
+[tool.pytest.ini_options]
+testpaths = [
+    "tests",
+]
+norecursedirs = [
+    ".git",
+    "build",
+    "dist",
+]
+
+[tool.mutmut]
+# paths_to_mutate = [ "src/" ]
+runner="python -m pytest"
+pytest_add_cli_args_test_selection= [ "tests/" ]
+tests_dir= [ "tests/" ]
+mutate_only_covered_lines=true
