--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,13 +14,14 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "pytest==9.0.1",
+    "pytest==8.4.2",
     "mutmut==3.4.0",
     "pyright==1.1.407",
     "pytest-cov==7.0.0",
     "black==25.11.0",
     "pylint==4.0.3",
     "ruff==0.14.5",
+    "pytest-testmon==2.1.4",
 ]
 
 [build-system]
@@ -57,8 +58,8 @@ norecursedirs = [
 ]
 
 [tool.mutmut]
-# paths_to_mutate = [ "src/" ]
-runner="python -m pytest"
-pytest_add_cli_args_test_selection= [ "tests/" ]
+paths_to_mutate = [ "src/" ]
+backup="False"
+runner='python -m pytest -x -q --tb=no --testmon -o addopts="" '
 tests_dir= [ "tests/" ]
 mutate_only_covered_lines=true
