--- a/pipelines/.pylintrc
+++ b/pipelines/.pylintrc
@@ -9,7 +9,7 @@ fail-under=9.0
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
-ignore=CVS
+ignore=CVS,.venv
 
 # Add files or directories matching the regex patterns to the blacklist. The
 # regex matches against base names, not paths.
